Fix text alignment for attachment file-name
@sha-265 has fixed this issue in several places (#2594 #2597 and #2980), just did the same for Generic Attachments with RTL file names.

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -477,7 +477,7 @@
   line-height: 18px;
   font-weight: 300;
   margin-top: 2px;
-
+  text-align: start;
   // Handling really long filenames - cut them off
   overflow-x: hidden;
   white-space: nowrap;
